# highpoint

./: .gitignore  AGENTS.md  ALGORITHM.md  LICENSE  Makefile  PROJECT.md  README.md  ROAD_DATA_SOURCES.md  TERRAIN_DATA_SOURCES.md  TODO.md  example.sh  install.sh  main.py  pyproject.toml  requirements.txt
archived/: PLANS.md
configs/: datasets.yaml  toyrun.yaml
data/terrain/: washington_tiles.txt
data/toy/: README.md  dem_synthetic.tif  gnis_populated_places.csv  roads_synthetic.geojson
docs/: ALGORITHM.md  GEOCODING.md  OBSTRUCTION_MODEL.md  ROAD_DATA_SOURCES.md  SCORING.md  TERRAIN_DATA_SOURCES.md  configuration.md
scripts/: download_toy_data.sh  download_us_data.sh  download_washington_data.sh  fetch_datasets.py  fetch_gazetteer.py  make_synthetic_dem.py
src/highpoint/: __init__.py  app.py  config.py  pipeline.py  simple_yaml.py  utils.py
src/highpoint/analysis/: candidates.py  drivability.py  visibility.py
src/highpoint/data/: discovery.py  geocode.py  roads.py  terrain.py
src/highpoint/render/: map.py
src/highpoint/reporting/: report.py
src/highpoint/scripts/: build_road_cache.py
tests/: conftest.py
tests/highpoint/: test_data_io.py  test_discovery.py  test_geocode.py  test_pipeline.py  test_visibility_model.py
